--- a/generate_results.ipynb
+++ b/generate_results.ipynb
@@ -29,34 +29,34 @@
     "from itertools import cycle\n",
     "from time import sleep\n",
     "from multi_objective.main import main, get_config\n",
-    "from plotting.plotting import load_data, plot_row"
+    "from plotting.plotting import load_data, plot_row, generate_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "7f8d2b09",
    "metadata": {},
    "outputs": [],
    "source": [
     "executor = submitit.AutoExecutor(folder=\"tmp/submitit\")\n",
-    "seeds = [0, 1, 2, 3, 4]"
+    "seeds = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "c42d82f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "executor.update_parameters(timeout_min=20, slurm_partition=\"alldlc_gpu-rtx2080\", name='results', gpus_per_node=1)\n",
+    "executor.update_parameters(timeout_min=120, slurm_partition=\"alldlc_gpu-rtx2080\", name='results', gpus_per_node=1)\n",
     "executor.update_parameters(slurm_array_parallelism=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "af5ec1c4",
    "metadata": {},
    "outputs": [],
@@ -67,8 +67,9 @@
     "\n",
     "def execute(config, seeds):\n",
     "    cfg = config.clone()\n",
-    "    cfg.eval_every = 1   # early stopping\n",
-    "    cfg.test_eval_every = 1  # generate test results\n",
+    "    cfg.eval_every = 100\n",
+    "    cfg.test_eval_every = 100  # generate test results\n",
+    "    cfg.metrics = ['mcr', 'mcr']\n",
     "    \n",
     "    cfgs = []\n",
     "    for seed in seeds:\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "828ea76a",
    "metadata": {},
    "outputs": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "3e84752a",
    "metadata": {},
    "outputs": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "03dd2be3",
    "metadata": {},
    "outputs": [],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "99563900",
    "metadata": {},
    "outputs": [],
@@ -159,12 +160,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "de755f5e",
    "metadata": {},
    "outputs": [],
    "source": [
     "jobs = execute(get_config('configs/multi_fashion_mnist/cosmos.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7464df59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('configs/multi_mnist/cosmos_orig.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "44ae2ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('configs/multi_fashion/cosmos_orig.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "4ee4c8a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('configs/multi_fashion_mnist/cosmos_orig.yaml'), seeds)"
    ]
   },
   {
@@ -177,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "abac03ff",
    "metadata": {},
    "outputs": [],
@@ -187,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "c1a5215e",
    "metadata": {},
    "outputs": [],
@@ -197,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "id": "9ae40260",
    "metadata": {},
    "outputs": [],
@@ -215,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "d8f184f9",
    "metadata": {},
    "outputs": [],
@@ -225,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "cb908bea",
    "metadata": {},
    "outputs": [],
@@ -235,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "ec22f7d7",
    "metadata": {},
    "outputs": [],
@@ -244,36 +275,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6ad87ead",
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b5a40afe",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### pmtl todo"
+    "jobs = execute(get_config('configs/multi_mnist/phn_orig.yaml'), seeds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95d6ce2a",
+   "execution_count": 47,
+   "id": "2aa26910",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jobs = execute(get_config('configs/multi_fashion/phn_orig.yaml'), seeds)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2d79650a",
+   "execution_count": 48,
+   "id": "78aee4aa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jobs = execute(get_config('configs/multi_fashion_mnist/phn_orig.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ad87ead",
+   "metadata": {},
+   "source": [
+    "#### pmtl"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9560d6b6",
+   "execution_count": 49,
+   "id": "c60603fa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jobs = execute(get_config('configs/multi_mnist/pmtl.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1868a742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('configs/multi_fashion/pmtl.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5d11b823",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('configs/multi_fashion_mnist/pmtl.yaml'), seeds)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "181f983a",
    "metadata": {},
    "outputs": [],
@@ -296,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "8f2aae39",
    "metadata": {},
    "outputs": [],
@@ -307,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "510227e9",
    "metadata": {},
    "outputs": [],
@@ -326,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "89a79255",
    "metadata": {},
    "outputs": [],
@@ -336,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "24a7a461",
    "metadata": {},
    "outputs": [],
@@ -346,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "id": "f9e6dd0b",
    "metadata": {},
    "outputs": [],
@@ -356,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e66264c",
+   "id": "96d4dd32",
    "metadata": {},
    "source": [
     "# Different sizes"
@@ -364,18 +431,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c993b00d",
+   "execution_count": 17,
+   "id": "83df19e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "executor.update_parameters(timeout_min=60)"
+    "executor.update_parameters(timeout_min=400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9b2a29a3",
+   "execution_count": 35,
+   "id": "3ed9d6ce",
    "metadata": {},
    "outputs": [
     {
@@ -389,76 +456,357 @@
     }
    ],
    "source": [
-    "results = load_data(dirname='results_size_2', datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
+    "size = 10\n",
+    "results = load_data(dirname=f'results_size_{size}', datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1ba502e1",
+   "execution_count": 36,
+   "id": "e762a4e9",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No handles with labels found to put in legend.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "uniform\n",
-      "success. See size_2_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
+      "uniform\n",
+      "uniform\n",
+      "success. See size_10_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
      ]
     }
    ],
    "source": [
-    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix='size_2')"
+    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix=f'size_{size}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca0dc81f",
+   "id": "0843d948",
    "metadata": {},
    "source": [
-    "#### uniform"
+    "#### size 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b146730e",
+   "execution_count": 18,
+   "id": "e72cd264",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = execute(get_config('size_configs/multi_fashion/uniform.yaml'), seeds)"
+    "jobs = execute(get_config('size_50_configs/multi_fashion/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "85c562ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_50_configs/multi_fashion/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_50_configs/multi_fashion/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "02339e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_50_configs/multi_fashion_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "03062353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_50_configs/multi_fashion_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_50_configs/multi_fashion_mnist/single_task_2.yaml'), seeds)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c6c242c8",
+   "id": "694628ca",
    "metadata": {},
    "source": [
-    "#### single task"
+    "#### size 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6df6b4d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_fashion/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "602d49d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_fashion/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_10_configs/multi_fashion/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d73afa15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_fashion_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f2886bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_fashion_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_10_configs/multi_fashion_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "12cd67cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "26c551ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_10_configs/multi_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b5c54cd",
+   "metadata": {},
+   "source": [
+    "#### size 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1cbc6db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_0.5_configs/multi_fashion/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fc1defc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_0.5_configs/multi_fashion/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_0.5_configs/multi_fashion/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a27d6724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_0.5_configs/multi_fashion_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b0937ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_0.5_configs/multi_fashion_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_0.5_configs/multi_fashion_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b9d5945c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_0.5_configs/multi_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d67bde07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_0.5_configs/multi_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_0.5_configs/multi_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e7aa1b",
+   "metadata": {},
+   "source": [
+    "# Grid search"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fea11cee",
+   "id": "f2911993",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = execute(get_config('size_configs/multi_fashion/single_task_1.yaml'), seeds)\n",
-    "jobs = execute(get_config('size_configs/multi_fashion/single_task_2.yaml'), seeds)"
+    "jobs = execute(get_config('grid_configs/multi_fashion/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a6538a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('grid_configs/multi_fashion/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('grid_configs/multi_fashion/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "583c2a47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('grid_configs/multi_fashion_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5c39e89e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('grid_configs/multi_fashion_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('grid_configs/multi_fashion_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5d416d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('grid_configs/multi_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0531a8df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('grid_configs/multi_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('grid_configs/multi_mnist/single_task_2.yaml'), seeds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9687c52",
+   "id": "aed5aa95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c1c51c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_mnist\n",
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname=f'results_grid', datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "46f606a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uniform\n",
+      "uniform\n",
+      "uniform\n",
+      "success. See grid_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix=f'grid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9848ca1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_table(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], name='grid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9c271c6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -480,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
