--- a/generate_results.ipynb
+++ b/generate_results.ipynb
@@ -29,12 +29,12 @@
     "from itertools import cycle\n",
     "from time import sleep\n",
     "from multi_objective.main import main, get_config\n",
-    "from plotting.plotting import load_data, plot_row, generate_table"
+    "from plotting.plotting import load_data, plot_row, generate_table, generate_table_taskwise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "7f8d2b09",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "c42d82f9",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "af5ec1c4",
    "metadata": {},
    "outputs": [],
@@ -84,50 +84,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "828ea76a",
+   "cell_type": "markdown",
+   "id": "2aa9ce75",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded data for multi_mnist\n",
-      "loaded data for multi_fashion\n",
-      "loaded data for multi_fashion_mnist\n"
-     ]
-    }
-   ],
    "source": [
-    "results = load_data(datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "3e84752a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uniform\n",
-      "phn\n",
-      "mgda\n",
-      "uniform\n",
-      "phn\n",
-      "mgda\n",
-      "uniform\n",
-      "phn\n",
-      "mgda\n",
-      "success. See baselines_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix='baselines')"
+    "# Baselines"
    ]
   },
   {
@@ -140,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "03dd2be3",
    "metadata": {},
    "outputs": [],
@@ -170,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "7464df59",
    "metadata": {},
    "outputs": [],
@@ -423,6 +384,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a1e4988",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "#### Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bdbb5b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_mnist\n",
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n",
+      "success. See baselines.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname='results')\n",
+    "plot_row(results, prefix='baselines')\n",
+    "generate_table(results, name='tab-baselines')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69befdd6",
+   "metadata": {},
+   "source": [
+    "#### MCR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5cc20cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_mnist\n",
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n",
+      "success. See baselines_mcr.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname='results', custom_metric=True)\n",
+    "plot_row(results, prefix='baselines_mcr')\n",
+    "generate_table_taskwise(results, name='tab-baselines_mcr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "96d4dd32",
    "metadata": {},
    "source": [
@@ -437,48 +461,6 @@
    "outputs": [],
    "source": [
     "executor.update_parameters(timeout_min=400)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "3ed9d6ce",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded data for multi_mnist\n",
-      "loaded data for multi_fashion\n",
-      "loaded data for multi_fashion_mnist\n"
-     ]
-    }
-   ],
-   "source": [
-    "size = 10\n",
-    "results = load_data(dirname=f'results_size_{size}', datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "e762a4e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uniform\n",
-      "uniform\n",
-      "uniform\n",
-      "success. See size_10_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix=f'size_{size}')"
    ]
   },
   {
@@ -675,6 +657,99 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb121711",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "#### Loss 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "be77571e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_mnist\n",
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n",
+      "success. See size_0.5.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname='results_size_0.5')\n",
+    "plot_row(results, prefix='size_0.5')\n",
+    "generate_table(results, name='tab-size_0.5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b399c0",
+   "metadata": {},
+   "source": [
+    "#### Loss 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "65c0be3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_mnist\n",
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n",
+      "success. See size_10.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname='results_size_10')\n",
+    "plot_row(results, prefix='size_10')\n",
+    "generate_table(results, name='tab-size_10')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d7e2ed4",
+   "metadata": {},
+   "source": [
+    "#### Loss 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e061596b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n",
+      "success. See size_50.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname='results_size_50', datasets=['multi_fashion', 'multi_fashion_mnist'])\n",
+    "plot_row(results, prefix='size_50', datasets=['multi_fashion', 'multi_fashion_mnist'])\n",
+    "generate_table(results, name='tab-size_50', datasets=['multi_fashion', 'multi_fashion_mnist'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68e7aa1b",
    "metadata": {},
    "source": [
@@ -745,17 +820,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aed5aa95",
+   "cell_type": "markdown",
+   "id": "ba49f19d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Results\n",
+    "#### Loss"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c1c51c2c",
+   "execution_count": 7,
+   "id": "0dff2f21",
    "metadata": {},
    "outputs": [
     {
@@ -764,44 +840,24 @@
      "text": [
       "loaded data for multi_mnist\n",
       "loaded data for multi_fashion\n",
-      "loaded data for multi_fashion_mnist\n"
+      "loaded data for multi_fashion_mnist\n",
+      "success. See grid.pdf\n"
      ]
     }
    ],
    "source": [
-    "results = load_data(dirname=f'results_grid', datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
+    "results = load_data(dirname='results_grid')\n",
+    "plot_row(results, prefix='grid')\n",
+    "generate_table(results, name='tab-grid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "46f606a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uniform\n",
-      "uniform\n",
-      "uniform\n",
-      "success. See grid_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
-     ]
-    }
-   ],
-   "source": [
-    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix=f'grid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9848ca1b",
+   "execution_count": null,
+   "id": "aed5aa95",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "generate_table(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], name='grid')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
