--- a/generate_results.ipynb
+++ b/generate_results.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aa9ce75",
+   "id": "983567b9",
    "metadata": {},
    "source": [
     "# Baselines"
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a1e4988",
+   "id": "64d80948",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -393,8 +393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bdbb5b7d",
+   "execution_count": 5,
+   "id": "012eed5c",
    "metadata": {},
    "outputs": [
     {
@@ -411,12 +411,13 @@
    "source": [
     "results = load_data(dirname='results')\n",
     "plot_row(results, prefix='baselines')\n",
-    "generate_table(results, name='tab-baselines')"
+    "generate_table(results, name='tab-baselines_loss')\n",
+    "generate_table_taskwise(results, name='tab-baselines_loss_tw')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "69befdd6",
+   "id": "fbe659a5",
    "metadata": {},
    "source": [
     "#### MCR"
@@ -424,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5cc20cdf",
+   "execution_count": 6,
+   "id": "9e7d7cb7",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,8 @@
    "source": [
     "results = load_data(dirname='results', custom_metric=True)\n",
     "plot_row(results, prefix='baselines_mcr')\n",
-    "generate_table_taskwise(results, name='tab-baselines_mcr')"
+    "generate_table(results, name='tab-baselines_mcr')\n",
+    "generate_table_taskwise(results, name='tab-baselines_mcr_tw')"
    ]
   },
   {
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "83df19e6",
    "metadata": {},
    "outputs": [],
@@ -514,6 +516,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7ac1d8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_50_configs/multi_mnist/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2302d540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_50_configs/multi_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_50_configs/multi_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "694628ca",
    "metadata": {},
@@ -544,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "d73afa15",
    "metadata": {},
    "outputs": [],
@@ -656,8 +679,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0dd6d451",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_10_configs/multi_fashion_mnist/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "cb121711",
+   "id": "0c7fc2a8",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -666,8 +699,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "be77571e",
+   "execution_count": 13,
+   "id": "81725d33",
    "metadata": {},
    "outputs": [
     {
@@ -682,14 +715,14 @@
     }
    ],
    "source": [
-    "results = load_data(dirname='results_size_0.5')\n",
+    "results = load_data(dirname='results_size_0.5', custom_metric=True)\n",
     "plot_row(results, prefix='size_0.5')\n",
     "generate_table(results, name='tab-size_0.5')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21b399c0",
+   "id": "fa5ed294",
    "metadata": {},
    "source": [
     "#### Loss 10"
@@ -697,8 +730,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "65c0be3e",
+   "execution_count": 14,
+   "id": "940b4176",
    "metadata": {},
    "outputs": [
     {
@@ -713,14 +746,14 @@
     }
    ],
    "source": [
-    "results = load_data(dirname='results_size_10')\n",
+    "results = load_data(dirname='results_size_10', custom_metric=True)\n",
     "plot_row(results, prefix='size_10')\n",
     "generate_table(results, name='tab-size_10')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d7e2ed4",
+   "id": "1d68d077",
    "metadata": {},
    "source": [
     "#### Loss 50"
@@ -728,14 +761,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e061596b",
+   "execution_count": 28,
+   "id": "098d65fe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loaded data for multi_mnist\n",
       "loaded data for multi_fashion\n",
       "loaded data for multi_fashion_mnist\n",
       "success. See size_50.pdf\n"
@@ -743,9 +777,9 @@
     }
    ],
    "source": [
-    "results = load_data(dirname='results_size_50', datasets=['multi_fashion', 'multi_fashion_mnist'])\n",
-    "plot_row(results, prefix='size_50', datasets=['multi_fashion', 'multi_fashion_mnist'])\n",
-    "generate_table(results, name='tab-size_50', datasets=['multi_fashion', 'multi_fashion_mnist'])"
+    "results = load_data(dirname='results_size_50', custom_metric=True)\n",
+    "plot_row(results, prefix='size_50')\n",
+    "generate_table(results, name='tab-size_50')"
    ]
   },
   {
@@ -821,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba49f19d",
+   "id": "8abdba7e",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -830,8 +864,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0dff2f21",
+   "execution_count": 11,
+   "id": "c2cc30ed",
    "metadata": {},
    "outputs": [
     {
@@ -841,13 +875,13 @@
       "loaded data for multi_mnist\n",
       "loaded data for multi_fashion\n",
       "loaded data for multi_fashion_mnist\n",
-      "success. See grid.pdf\n"
+      "success. See grid-mcr.pdf\n"
      ]
     }
    ],
    "source": [
-    "results = load_data(dirname='results_grid')\n",
-    "plot_row(results, prefix='grid')\n",
+    "results = load_data(dirname='results_grid', custom_metric=True)\n",
+    "plot_row(results, prefix='grid-mcr')\n",
     "generate_table(results, name='tab-grid')"
    ]
   },
