--- a/hpo.ipynb
+++ b/hpo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "6395b840",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "e3e7f060",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "d27d2cc2",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "e85e5b25",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "8beab615",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "ffb56d03",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "5b7b107f",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "769da299",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "f63f412e",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "id": "20775361",
    "metadata": {},
    "outputs": [
@@ -265,34 +265,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.36388332793506173 99 7242858_0\n",
-      "0.5334165340019847 99 7242858_1\n",
-      "0.5497486827324218 99 7242858_24\n",
-      "0.5523824454830044 99 7242858_50\n",
-      "0.5533556019189323 99 7242858_99\n",
-      "Best job: 7242858_99\n"
+      "0.3452180310415267 99 7244714_0\n",
+      "0.48006205162478555 99 7244714_1\n",
+      "0.4875842712136915 99 7244714_3\n",
+      "0.5395834475087122 99 7244714_6\n",
+      "0.5446465594140557 99 7244714_7\n",
+      "0.5749713747625675 99 7244714_12\n",
+      "0.5839264198008023 99 7244714_26\n",
+      "Best job: 7244714_26\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'scheduler': 'CosineAnnealing',\n",
-       " 'lr': 0.00075,\n",
+       "{'scheduler': 'MultiStep',\n",
+       " 'lr': 0.00025,\n",
        " 'weight_decay': 0.01,\n",
        " 'solver': 'linear',\n",
        " 'norm': 'none',\n",
        " 'alpha': 0.2,\n",
        " 'lamda': 0.0,\n",
-       " 'channel_multiplier': 1.0}"
+       " 'channel_multiplier': 10.0}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jobs = load_jobs('single_task_l', 'multi_fashion_mnist', 'hpo')\n",
+    "jobs = load_jobs('single_task_r', 'multi_mnist', 'hpo_size_10')\n",
     "get_optimal_cfg(jobs)"
    ]
   },
@@ -843,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 40,
    "id": "ad914b2b",
    "metadata": {},
    "outputs": [],
@@ -863,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "3c8348ae",
    "metadata": {},
    "outputs": [
@@ -871,34 +873,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.22360820091529376 99 7294362_0\n",
-      "0.48225863514595435 99 7294362_1\n",
-      "0.5108200768608029 99 7294362_8\n",
-      "0.5492423874746919 99 7294362_24\n",
-      "0.5676833713127927 99 7294362_51\n",
-      "Best job: 7294362_51\n"
+      "0.355660399600751 99 7404787_0\n",
+      "0.4104817393035205 99 7404787_3\n",
+      "0.5714953496038699 99 7404787_6\n",
+      "0.6041196119346615 99 7404787_7\n",
+      "0.6187506913460388 99 7404787_11\n",
+      "0.6310281884425972 99 7404787_42\n",
+      "Best job: 7404787_42\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'scheduler': 'CosineAnnealing',\n",
-       " 'lr': 0.001,\n",
-       " 'weight_decay': 0.01,\n",
+       "{'scheduler': 'MultiStep',\n",
+       " 'lr': 0.0001,\n",
+       " 'weight_decay': 0.0075,\n",
        " 'solver': 'linear',\n",
        " 'norm': 'none',\n",
        " 'alpha': 0.2,\n",
        " 'lamda': 0.0,\n",
-       " 'channel_multiplier': 1.0}"
+       " 'channel_multiplier': 50.0}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jobs = load_jobs('uniform', 'multi_fashion_mnist', 'hpo_grid')\n",
+    "jobs = load_jobs('uniform', 'multi_mnist', 'hpo_size_50')\n",
     "get_optimal_cfg(jobs)"
    ]
   },
@@ -988,6 +991,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f181ba83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('size_50_configs/multi_mnist/single_task_1.yaml'), \n",
+    "    hp_spaces=[\n",
+    "        lr, \n",
+    "        weight_decay, \n",
+    "        scheduler,\n",
+    "    ],\n",
+    "    tag='hpo_size_50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e70bddff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('size_50_configs/multi_mnist/single_task_2.yaml'), \n",
+    "    hp_spaces=[\n",
+    "        lr, \n",
+    "        weight_decay, \n",
+    "        scheduler,\n",
+    "    ],\n",
+    "    tag='hpo_size_50')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c344ad13",
    "metadata": {},
@@ -1021,6 +1058,23 @@
    "source": [
     "jobs = execute_and_save(\n",
     "    get_config('size_50_configs/multi_fashion_mnist/uniform.yaml'), \n",
+    "    hp_spaces=[\n",
+    "        lr, \n",
+    "        weight_decay, \n",
+    "        scheduler,\n",
+    "    ],\n",
+    "    tag='hpo_size_50')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8145bd73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('size_50_configs/multi_mnist/uniform.yaml'), \n",
     "    hp_spaces=[\n",
     "        lr, \n",
     "        weight_decay, \n",
@@ -1581,7 +1635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
